PTC_2 Tarefas JSON Fetch

--- a/GC2024/PTC_2/projeto_cadastrar_tarefas/index.html
+++ b/GC2024/PTC_2/projeto_cadastrar_tarefas/index.html
@@ -61,12 +61,12 @@
                         </select>
                     </form>
 
-                    <button class="button" form="gather">
+                    <button type="submit" class="button" form="gather">
                         Cadastrar Tarefa 
                     </button>
                 </div>
 
-                <div class="mostra-info">
+                <div class="mostra-info" id="tabela-info">
 
                 </div>
             </section>
@@ -86,6 +86,6 @@
         <!-- Componentização acima dos scripts -->
 
         <!-- Scripts -->
-        <script src='./assets/js/scripts/script.js'></script>
+        <script type="module" src='./js/scripts/script.js'></script>
     </body>
 </html>
